# hello-vulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_shaders.bat  vcpkg.json
shaders/: triangle.frag  triangle.vert
source/: main.cpp
